modifiche icone menu

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <body>
          <div id="navbar">
             <ul class="sidenav">
-                <li><a rel="index" href="" class=""><span class="material-icons">home</span></a></li>
-                <li><a rel="about" href="" class=""><span class="material-icons">person</span></a></li>
-                <li><a rel="skills" href="" class=""><span class="material-icons">extension</span></a></li>
+                <li><a rel="index" href="" class=""><span class="material-icons">roofing</span></a></li>
+                <li><a rel="about" href="" class=""><span class="material-icons">perm_identity</span></a></li>
+                <li><a rel="skills" href="" class=""><span class="material-icons">handyman</span></a></li>
                 <li><a rel="gallery" href="" class=""><span class="material-icons">remove_red_eye</span></a></li>
-                <li><a rel="contact" href="" class=""><span class="material-icons">email</span></a></li>
+                <li><a rel="contact" href="" class=""><span class="material-icons">forward_to_inbox</span></a></li>
             </ul>
         </div>
     </body>
