--- a/index.html
+++ b/index.html
@@ -18,5 +18,14 @@
                 <li><a rel="contact" href="" class=""><span class="material-icons">forward_to_inbox</span></a></li>
             </ul>
         </div>
+
+        <div id="page">
+            <div class="container home-page">
+                <div class="text-zone">
+                    <h1>Ciao,<br> Io sono Daniela.</h1>
+                    <br>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
