--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" type="text/css" href="vendors/css/normalize.css">
+    <link rel="stylesheet" type="text/css" href="vendors/css/grid.css">
     <link rel="stylesheet" type="text/css" href="resources/css/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto+Mono:ital,wght@0,100;0,300;0,400;1,300&display=swap" rel="stylesheet">
@@ -11,7 +12,14 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Portfolio</h1>
+    <header>
+       <div class="hero-text-box">
+           <h1>Hi,<br> my name is Daniela</h1>
+           <a class="btn btn-full" href="#">Contact me!</a>
+           <a class="btn btn-ghost" href="#">Show me more</a>
+       </div> 
+    </header>
+    
     
 </body>
 </html>
