--- a/index.html
+++ b/index.html
@@ -13,6 +13,17 @@
 </head>
 <body>
     <header>
+        <nav>
+            <div class="row">
+                <!--<img src="" alt="logo" class="logo">-->
+                <ul class="main-nav">
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Skills</a></li>
+                    <li><a href="#">My Work</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </div>
+        </nav>
        <div class="hero-text-box">
            <h1>Hi,<br> my name is Daniela</h1>
            <a class="btn btn-full" href="#">Contact me!</a>
