--- a/index.html
+++ b/index.html
@@ -30,7 +30,37 @@
            <a class="btn btn-ghost" href="#">Show me more</a>
        </div> 
     </header>
+
+    <section class="section-features">
+        <div class="row">
+            <h2>About me</h2>
+            <p class="long-copy">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ab harum placeat delectus reprehenderit impedit molestiae nam eaque eveniet quas deleniti, optio vitae sit voluptates unde debitis amet neque asperiores ipsa.</p>
+        </div>
+
+        <div class="row">
+            <div class="col span-1-of-4">
+                <ion-icon name="archive-outline"></ion-icon>
+                <h3>Lorem ipsum jiejdfeis</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis beatae, ipsa dolorum ut illum unde! Eos deserunt animi, hic et iure, assumenda, corporis mollitia qui quidem architecto eveniet eum at?</p>
+            </div>
+            <div class="col span-1-of-4">
+                <ion-icon name="archive-outline"></ion-icon>
+                <h3>Lorem ipsum jiejdfeis</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis beatae, ipsa dolorum ut illum unde! Eos deserunt animi, hic et iure, assumenda, corporis mollitia qui quidem architecto eveniet eum at?</p>
+            </div>
+            <div class="col span-1-of-4">
+                <ion-icon name="archive-outline"></ion-icon>
+                <h3>Lorem ipsum jiejdfeis</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis beatae, ipsa dolorum ut illum unde! Eos deserunt animi, hic et iure, assumenda, corporis mollitia qui quidem architecto eveniet eum at?</p>
+            </div>
+            <div class="col span-1-of-4">
+                <ion-icon name="archive-outline"></ion-icon>
+                <h3>Lorem ipsum jiejdfeis</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis beatae, ipsa dolorum ut illum unde! Eos deserunt animi, hic et iure, assumenda, corporis mollitia qui quidem architecto eveniet eum at?</p>
+            </div>
+        </div>
+    </section>
     
-    
+    <script src="https://unpkg.com/ionicons@5.0.0/dist/ionicons.js"></script>    
 </body>
 </html>
