--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="row">
                 <!--<img src="" alt="logo" class="logo">-->
                 <ul class="main-nav">
-                    <li><a href="#">About</a></li>
+                    <li><a href="#">About me</a></li>
                     <li><a href="#">Skills</a></li>
                     <li><a href="#">My Work</a></li>
                     <li><a href="#">Contact</a></li>
@@ -38,23 +38,23 @@
         </div>
 
         <div class="row">
-            <div class="col span-1-of-4">
-                <ion-icon name="archive-outline"></ion-icon>
+            <div class="col span-1-of-4 box">
+                <ion-icon class="icon-big" name="archive-outline"></ion-icon>
                 <h3>Lorem ipsum jiejdfeis</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis beatae, ipsa dolorum ut illum unde! Eos deserunt animi, hic et iure, assumenda, corporis mollitia qui quidem architecto eveniet eum at?</p>
             </div>
-            <div class="col span-1-of-4">
-                <ion-icon name="archive-outline"></ion-icon>
+            <div class="col span-1-of-4 box">
+                <ion-icon class="icon-big" name="archive-outline"></ion-icon>
                 <h3>Lorem ipsum jiejdfeis</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis beatae, ipsa dolorum ut illum unde! Eos deserunt animi, hic et iure, assumenda, corporis mollitia qui quidem architecto eveniet eum at?</p>
             </div>
-            <div class="col span-1-of-4">
-                <ion-icon name="archive-outline"></ion-icon>
+            <div class="col span-1-of-4 box">
+                <ion-icon class="icon-big" name="archive-outline"></ion-icon>
                 <h3>Lorem ipsum jiejdfeis</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis beatae, ipsa dolorum ut illum unde! Eos deserunt animi, hic et iure, assumenda, corporis mollitia qui quidem architecto eveniet eum at?</p>
             </div>
-            <div class="col span-1-of-4">
-                <ion-icon name="archive-outline"></ion-icon>
+            <div class="col span-1-of-4 box">
+                <ion-icon class="icon-big" name="archive-outline"></ion-icon>
                 <h3>Lorem ipsum jiejdfeis</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis beatae, ipsa dolorum ut illum unde! Eos deserunt animi, hic et iure, assumenda, corporis mollitia qui quidem architecto eveniet eum at?</p>
             </div>
