--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
                 <!--<img src="" alt="logo" class="logo">-->
                 <ul class="main-nav">
                     <li><a href="#">About me</a></li>
-                    <li><a href="#">Skills</a></li>
                     <li><a href="#">My Work</a></li>
+                    <li><a href="#">Skills</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
             </div>
@@ -59,6 +59,49 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis beatae, ipsa dolorum ut illum unde! Eos deserunt animi, hic et iure, assumenda, corporis mollitia qui quidem architecto eveniet eum at?</p>
             </div>
         </div>
+    </section>
+
+    <section class="section-meals">
+        <ul class="meals-showcase">
+            <li>
+                <figure class="meals-photo">
+                   <img src="resources/img/1.jpg" alt="">
+                </figure>
+            </li>
+            <li>
+                <figure class="meals-photo">
+                   <img src="resources/img/2.jpg" alt="">
+                </figure>
+            </li><li>
+                <figure class="meals-photo">
+                   <img src="resources/img/3.jpg" alt="">
+                </figure>
+            </li><li>
+                <figure class="meals-photo">
+                   <img src="resources/img/4.jpg" alt="">
+                </figure>
+            </li>
+        </ul>
+        <ul class="meals-showcase">
+            <li>
+                <figure class="meals-photo">
+                   <img src="resources/img/5.jpg" alt="">
+                </figure>
+            </li>
+            <li>
+                <figure class="meals-photo">
+                   <img src="resources/img/6.jpg" alt="">
+                </figure>
+            </li><li>
+                <figure class="meals-photo">
+                   <img src="resources/img/7.jpg" alt="">
+                </figure>
+            </li><li>
+                <figure class="meals-photo">
+                   <img src="resources/img/8.jpg" alt="">
+                </figure>
+            </li>
+        </ul>
     </section>
     
     <script src="https://unpkg.com/ionicons@5.0.0/dist/ionicons.js"></script>    
